[gd_scene load_steps=7 format=3 uid="uid://bpaseo8uoa2yt"]

[ext_resource type="Script" path="res://scenes/gui/modal/game_before_start/game_before.gd" id="1_5x4pd"]
[ext_resource type="PackedScene" uid="uid://cpkmnev1qs7vf" path="res://scenes/gui/elemets/modal_wnd/modal_wnd.tscn" id="2_5ui6b"]
[ext_resource type="FontFile" uid="uid://dxxuxrpd08vvi" path="res://assets/fonts/RubikMonoOne.ttf" id="3_tn0pk"]
[ext_resource type="Texture2D" uid="uid://58sfdg4fg3wp" path="res://assets/img/holder_lite.png" id="4_kbi5d"]
[ext_resource type="Texture2D" uid="uid://b8od0k4pg72p3" path="res://assets/img/btn_green.png" id="5_0o4hw"]
[ext_resource type="PackedScene" uid="uid://dpqh8pir1qxri" path="res://scenes/gui/elemets/game_rule/game_rule.tscn" id="5_fteu2"]

[node name="game_before" type="Control"]
custom_minimum_size = Vector2(900, 1600)
layout_mode = 3
anchor_right = 1.00778
anchor_bottom = 0.994375
offset_right = -3.05176e-05
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5x4pd")
metadata/_edit_use_anchors_ = true

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
color = Color(0.0196078, 0.0196078, 0.0196078, 0.568627)

[node name="SizeBox" type="Control" parent="."]
custom_minimum_size = Vector2(500, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.5
offset_top = -300.0
offset_right = 264.5
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalWindow" parent="SizeBox" instance=ExtResource("2_5ui6b")]
layout_mode = 1
anchor_left = -0.217391
anchor_top = -0.151667
anchor_right = 1.22684
anchor_bottom = 0.923333
grow_horizontal = 2
grow_vertical = 2
Caption = "Уровень 1"

[node name="Box" type="MarginContainer" parent="SizeBox/ModalWindow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.146667
anchor_right = 0.89
anchor_bottom = 0.923333
theme_override_constants/margin_top = 20
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SizeBox/ModalWindow/Box"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextBox" type="MarginContainer" parent="SizeBox/ModalWindow/Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="SizeBox/ModalWindow/Box/VBoxContainer/TextBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tn0pk")
theme_override_font_sizes/font_size = 30
text = "Собери, чтобы победить"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RulesBoxMargin" type="MarginContainer" parent="SizeBox/ModalWindow/Box/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
texture = ExtResource("4_kbi5d")
patch_margin_left = 15
patch_margin_top = 9
patch_margin_right = 15
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin/NinePatchRect"]
layout_mode = 0
anchor_left = 0.0298507
anchor_top = 0.105
anchor_right = 0.946932
anchor_bottom = 0.895
metadata/_edit_use_anchors_ = true

[node name="RuleBox" type="HBoxContainer" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="rule1" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin/NinePatchRect/MarginContainer/RuleBox" instance=ExtResource("5_fteu2")]
layout_mode = 2
size_flags_horizontal = 3

[node name="rule2" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin/NinePatchRect/MarginContainer/RuleBox" instance=ExtResource("5_fteu2")]
layout_mode = 2
size_flags_horizontal = 3

[node name="rule3" parent="SizeBox/ModalWindow/Box/VBoxContainer/RulesBoxMargin/NinePatchRect/MarginContainer/RuleBox" instance=ExtResource("5_fteu2")]
layout_mode = 2
size_flags_horizontal = 3

[node name="empty" type="MarginContainer" parent="SizeBox/ModalWindow/Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="btn_start" type="TextureButton" parent="SizeBox/ModalWindow/Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("5_0o4hw")
stretch_mode = 5

[node name="Label" type="Label" parent="SizeBox/ModalWindow/Box/VBoxContainer/btn_start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tn0pk")
theme_override_font_sizes/font_size = 50
text = "СТАРТ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="SizeBox/ModalWindow"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0141243
anchor_top = 0.135575
anchor_right = 0.903955
anchor_bottom = 0.903471
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="focus_entered" from="bg" to="." method="_on_bg_focus_entered"]
[connection signal="pressed" from="SizeBox/ModalWindow/Box/VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
